--- a/.github/workflows/cloud-pipeline.yml
+++ b/.github/workflows/cloud-pipeline.yml
@@ -9,6 +9,14 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Cache Maven Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-${{ runner.os }}-
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
