--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,18 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.example.cloud.App</mainClass> <!-- Change to your actual main class -->
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
+
     </plugins>
   </build>
 
