--- a/.github/workflows/cloud-pipeline.yml
+++ b/.github/workflows/cloud-pipeline.yml
@@ -35,4 +35,5 @@ jobs:
       - name: Wait for Service to Start
         run: sleep 10  # Wait for 10 seconds to allow Spring Boot to start
 
-
+      - name: Check Service Status
+        run: curl -s http://localhost:9090/
